# rick_cli

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  main.rs  proxy_server.rs  renderer.rs
src/lib/: mod.rs
src/lib/query_language/: mod.rs  operand.rs  operation.rs  operation_list.rs
src/lib/rm_api/: entities.rs  mod.rs
src/lib/rm_api/request/: builder.rs  direct_request.rs  mock_request.rs  mod.rs  proxy_request.rs
src/lib/rm_api/response/: builder.rs  mod.rs
