[package]
name = "rick_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18" 
redis = "0.22.1"
rocket = "0.5.0-rc.2"
reqwest = "0.11.12"
async-trait = "0.1.58"
tui = "0.19"
crossterm = "0.25"
regex-lexer-lalrpop = "0.3.0"